# rinha-backend-2026

./: .gitignore  ARQUITETURA.excalidraw  Cargo.toml  Dockerfile  docker-compose.yml  haproxy.cfg  info.json
src/: data.rs  main.rs  parse.rs  vectorize.rs
