[package]
name = "rinha"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rinha"
path = "src/main.rs"

[[bin]]
name = "preprocess"
path = "src/bin/preprocess.rs"

[dependencies]
tokio = { version = "1", features = ["rt", "net", "io-util", "sync", "macros"] }
hyper = { version = "1", features = ["server", "http1"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
